# MDE_Application

./: .gitignore  Changelog.txt  README.md  docker-compose.yaml
.gihub/workflows/: docker-image.yml
.github/workflows/: docker-image.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/app/: graphs.py  jsoncreatord.py  main.py  master.json  mongo.py  server.py
frontend/: .env.development  Dockerfile  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  page.jsx  page.module.css  page.tsx
frontend/app/aboutus/: page.jsx  page.module.css  page.tsx
frontend/app/components/: aStarMulti.jsx  aboutPrimeVision.jsx  aboutUsCard.jsx  astar.jsx  codeblock.jsx  conclusionsBox.jsx  dstar.jsx  flipcard.jsx  futureResearchBox.jsx  graphdisplay.jsx  linkflipcard.jsx  navbar.jsx  ourSimBox.jsx  personcard.tsx  picflipcard.jsx  problemflipcards.jsx  projectcompentsimgleft.jsx  projectcomponents.jsx  revealbox.jsx  simLogExample.jsx  simflipcard.jsx  simpopup.jsx  simsdrawer.jsx  simulationEnvBox.jsx  tabs.jsx  uploadpopup.jsx  videoplayer.jsx
frontend/app/hooks/: get_graph.jsx  get_logs.jsx  get_search.jsx
frontend/app/methodology/: page.jsx  page.tsx
frontend/app/project/: page.jsx  page.tsx
frontend/app/results/: page.jsx  (+2 more)
frontend/app/results-failed/: Dashboard.tsx  page.tsx
nginx/config/: nginx.conf
(+223 files in other folders)
